> 2010/04/16 - 0.9.2 release
  - The rope of grapple no longer gets stuck in ground.
  - Network games between specific computers which didn't work properly before should work now.
  - A bug has been fixed which prevented the bugzilla team to have more then three players.
  - Poisoned characters die now when they have to less health.

> 2010/03/08 - 0.9.1 release
  - Bugfixes:
      * Fix shoot key handling when user exceeds the weapon max strength
      * Fix: Do not apply damage from explosion twice
      * Fix rope size check when attaching
      * Fix some memory leaks
      * And some others...
  - One new skin: bugzilla
  - One new map: chess map
  - 4 new musics: circux, diabolicux, exoticux and woodlux
  - Menu improvement: better management of tabs on small screen.
  - Cleaner code
  - Update translations

> 2010/01/26 - 0.9.0 release
  - Artificial Intelligence!!! No more hidden feature AI-stupid. The new AI is smart.
  - Improved quality of network games
  - Two new teams: Postfix and Hexley
  - Add 3 new maps. Delete 3 old ones.
  - Some display and gameplay improvements
  - A lot of other improvements and bug fixes

> 2009/09/15 - 0.8.5 release
  - Fix handling of key event during the game
  - Fix new sound player warning
  - Fix several network bugs related to random generator
  - Fix keep-alive connexion to index server when hosting a server from the game
  - Fix crash when invalid display resolution requested
  - Fix "play in loop" options for network games
  - Refresh the public network games list
  - Multi-layer sky
  - Camera enhancement
  - Weapon behavior: gnu, supertux and polecat now explode when pressing space, M16 repeats shoot
  - Lefthand-operated mouse option
  - Small skin animation enhancements
  - Automatically create personal directories for maps, teams and game_mode
  - New maps
  - Do not overlink index server and game server binaries
  - Translation updates

> 2009/07/03 - 0.8.4 release
  - Dedicated game server